Styled app with foundation

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,7 +1,6 @@
 
 // Colors
 $gray: #333333;
-
-// Navigations Colors
-$nav-background: $gray;
-$nav-text-color: white;
+$light-grey: #FDFDFD;
+$light-grey-border: #F9F9F9;
+$light-color: #aaa;
