--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,3 +10,5 @@
 @import "components/container";
 @import "components/page-title";
 @import "components/todo";
+@import "components/page-actions";
+@import "components/callout-auth";
